# co-log

./: .gitignore  .hlint.yaml  .travis.yml  CHANGELOG.md  README-2.md  README.lhs  README.md  appveyor.yml  cabal.project  co-log.cabal  shell.nix  stack.yaml
.github/: CODEOWNERS
.github/workflows/: ci.yml  publish.yaml
co-log/: CHANGELOG.md  README.md  co-log.cabal
co-log-benchmark/: CHANGELOG.md  LICENSE  Main.hs  co-log-benchmark.cabal
co-log-core/: CHANGELOG.md  README.md  co-log-core.cabal
co-log-core/src/: CoLog.hs
co-log-core/src/CoLog/: Core.hs
co-log-core/src/Colog/: Core.hs
co-log-core/src/Colog/Core/: Action.hs  Class.hs  IO.hs  Severity.hs
co-log-core/test/: Doctests.hs
co-log-core/tests/: doctest.hs
co-log-polysemy/: CHANGELOG.md  README.md  co-log-polysemy.cabal
co-log-polysemy/example/: Main.hs
co-log-polysemy/src/Colog/: Polysemy.hs
co-log-polysemy/src/Colog/Polysemy/: Effect.hs
co-log/example/: Main.hs  README.md
co-log/example/1-intro/: Intro.lhs  Intro.md
co-log/example/2-custom/: Custom.md
co-log/src/: Colog.hs
co-log/src/Colog/: Actions.hs  Concurrent.hs  Contra.hs  Message.hs  Monad.hs  Name.hs  Pure.hs  Rotation.hs
co-log/src/Colog/Concurrent/: Internal.hs
co-log/test/: Doctest.hs  Doctests.hs  Main.hs  Property.hs
co-log/tutorials/: Concurrent.hs  Main.hs  README.md
co-log/tutorials/1-intro/: Intro.md
co-log/tutorials/2-custom/: Custom.md
src/: Colog.hs
src/Colog/: Actions.hs  Contra.hs  Message.hs  Monad.hs  Pure.hs  Rotation.hs
src/Colog/Concurrent/: Internal.hs
test/: Property.hs
tutorials/: Concurrent.hs  Main.hs  README.md
tutorials/1-intro/: Intro.md
tutorials/2-loggert/: LoggerT.hs  README.md
tutorials/3-custom/: Custom.lhs
tutorials/3-loggert-with-message/: LoggerT.hs  README.md
