cabal-version:       2.4
name:                co-log-benchmark
version:             0.0.0
synopsis:            Benchmarks of the co-log library.
description:         Set of benchmarks that can be used to verify
                     that @co-log@ library does not introduce unnesessarily
                     overhead for your use-case. And check that colog
                     library behaves on par with other frameworks.
license:             MPL-2.0
license-file:        LICENSE
author:              Alexander Vershilov, Kowainik
maintainer:          Kowainik
copyright:           2018-2019 Kowainik
category:            Logging, Benchmarks
build-type:          Simple
extra-source-files:  CHANGELOG.md
tested-with:         GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.5

source-repository head
  type:              git
  location:          https://github.com/kowainik/co-log.git

executable co-log-bench
  main-is:             Main.hs
  build-depends:       base >= 4.10 && < 4.13
                     , bytestring
                     , co-log
                     , text
                     , time
                     , typed-process
                     , unix
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -freverse-errors
                       -Wpartial-fields

  default-language:    Haskell2010
