name:                co-log-core
version:             0.1.1
description:         Logging library
synopsis:            Logging library
homepage:            https://github.com/kowainik/co-log
bug-reports:         https://github.com/kowainik/co-log/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik
maintainer:          xrom.xkov@gmail.com
copyright:           2018 Kowainik
category:            Logging
build-type:          Simple
extra-doc-files:     CHANGELOG.md
cabal-version:       2.0
tested-with:         GHC == 8.2.2
                   , GHC == 8.4.3
                   , GHC == 8.6.1

source-repository head
  type:                git
  location:            https://github.com/kowainik/co-log.git

library
  hs-source-dirs:      src
  exposed-modules:     Colog.Core
                           Colog.Core.Action
                           Colog.Core.Class
                           Colog.Core.Severity
                           Colog.Core.IO

  build-depends:       base >= 4.10 && < 4.13

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -freverse-errors

  default-language:    Haskell2010
  default-extensions:  InstanceSigs
  other-extensions:    CPP

test-suite doctest
  build-depends: base, doctest ^>= 0.16.0
  default-language: Haskell2010
  hs-source-dirs: test
  main-is: Doctests.hs
  type: exitcode-stdio-1.0
