cabal-version:       2.0
name:                co-log-core
version:             0.1.1
synopsis:            Composable Contravariant Comonadic Logging Library
description:
    This package provides core types and functions to work with the @LogAction@ data type which is both simple and powerful.
    .
    @
    __newtype__ LogAction m msg = LogAction
    \    { unLogAction :: msg -> m ()
    \    }
    @
    .
    The ideas behind this package are described in the following blog post:
    .
    * [co-log: Composable Contravariant Combinatorial Comonadic Configurable Convenient Logging](https://kowainik.github.io/posts/2018-09-25-co-log)

homepage:            https://github.com/kowainik/co-log
bug-reports:         https://github.com/kowainik/co-log/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik
maintainer:          xrom.xkov@gmail.com
copyright:           2018 Kowainik
category:            Logging
build-type:          Simple
extra-doc-files:     CHANGELOG.md
tested-with:         GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.2

source-repository head
  type:                git
  location:            https://github.com/kowainik/co-log.git

library
  hs-source-dirs:      src
  exposed-modules:     Colog.Core
                           Colog.Core.Action
                           Colog.Core.Class
                           Colog.Core.Severity
                           Colog.Core.IO

  build-depends:       base >= 4.10 && < 4.13

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -freverse-errors

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

test-suite doctest
  type:                 exitcode-stdio-1.0
  build-depends:        base >= 4.10 && < 4.13
                      , doctest ^>= 0.16.0
  default-language:     Haskell2010
  hs-source-dirs:       test
  main-is:              Doctests.hs
