cabal-version:       2.0
name:                co-log
version:             0.2.0
description:         Logging library
synopsis:            Logging library
homepage:            https://github.com/kowainik/co-log
bug-reports:         https://github.com/kowainik/co-log/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik
maintainer:          xrom.xkov@gmail.com
copyright:           2018 Kowainik
category:            Logging
build-type:          Simple
extra-doc-files:     CHANGELOG.md
tested-with:         GHC == 8.2.2
                   , GHC == 8.4.3
                   , GHC == 8.6.1

source-repository head
  type:                git
  location:            https://github.com/kowainik/co-log.git

library
  hs-source-dirs:      src
  exposed-modules:     Colog
                           Colog.Actions
                           Colog.Concurrent
                               Colog.Concurrent.Internal
                           Colog.Contra
                           Colog.Message
                           Colog.Monad
                           Colog.Pure
  other-modules:       Prelude

  build-depends:       base-noprelude >= 4.10 && < 4.13
                     , ansi-terminal ^>= 0.8
                     , bytestring ^>= 0.10.8
                     , co-log-core ^>= 0.1.0
                     , containers >= 0.5.7 && < 0.7
                     , contravariant ^>= 1.5
                     , mtl ^>= 2.2.2
                     , relude ^>= 0.3.0
                     , stm >= 2.4 && < 2.6
                     , text ^>= 1.2.3
                     , time >= 1.8 && < 1.10
                     , transformers ^>= 0.5
                     , typerep-map ^>= 0.3.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -freverse-errors

  default-language:   Haskell2010
  default-extensions: DeriveGeneric
                      GeneralizedNewtypeDeriving
                      InstanceSigs
                      OverloadedStrings
                      RecordWildCards
                      TypeApplications
  other-extensions:   CPP

executable play-colog
  hs-source-dirs:      example
  main-is:             Main.hs

  build-depends:       base
                     , co-log
                     , relude
                     , typerep-map

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -freverse-errors
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

  default-language:    Haskell2010

executable readme
  main-is:             README.lhs
  build-depends:       base
                     , co-log
                     , text

  build-tool-depends:  markdown-unlit:markdown-unlit
  ghc-options:         -Wall -pgmL markdown-unlit
  default-language:    Haskell2010
