cabal-version:       2.0
name:                co-log
version:             0.2.0
synopsis:            Composable Contravariant Comonadic Logging Library
description:
    The default implementation of logging based on
    [co-log-core](http://hackage.haskell.org/package/co-log-core).
    .
    The ideas behind this package are described in the following blog post:
    .
    * [co-log: Composable Contravariant Combinatorial Comonadic Configurable Convenient Logging](https://kowainik.github.io/posts/2018-09-25-co-log)

homepage:            https://github.com/kowainik/co-log
bug-reports:         https://github.com/kowainik/co-log/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Kowainik, Alexander Vershilov
maintainer:          xrom.xkov@gmail.com
copyright:           2018-present Kowainik
category:            Logging
build-type:          Simple
extra-doc-files:     CHANGELOG.md
tested-with:         GHC == 8.2.2
                   , GHC == 8.4.4
                   , GHC == 8.6.3

source-repository head
  type:                git
  location:            https://github.com/kowainik/co-log.git

library
  hs-source-dirs:      src
  exposed-modules:     Colog
                           Colog.Actions
                           Colog.Concurrent
                               Colog.Concurrent.Internal
                           Colog.Contra
                           Colog.Message
                           Colog.Monad
                           Colog.Pure
                           Colog.Rotation

  build-depends:       base >= 4.10 && < 4.13
                     , ansi-terminal ^>= 0.8
                     , bytestring ^>= 0.10.8
                     , co-log-core ^>= 0.1.1
                     , containers >= 0.5.7 && < 0.7
                     , contravariant ^>= 1.5
                     , directory ^>= 1.3.0
                     , filepath ^>= 1.4.1
                     , mtl ^>= 2.2.2
                     , stm >= 2.4 && < 2.6
                     , text ^>= 1.2.3
                     , time >= 1.8 && < 1.10
                     , transformers ^>= 0.5
                     , typerep-map ^>= 0.3.0

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -freverse-errors

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

executable play-colog
  hs-source-dirs:      example
  main-is:             Main.hs

  build-depends:       base
                     , co-log
                     , mtl
                     , typerep-map

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -freverse-errors
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

  default-language:    Haskell2010

executable readme
  main-is:             README.lhs
  build-depends:       base
                     , co-log
                     , text

  build-tool-depends:  markdown-unlit:markdown-unlit
  ghc-options:         -Wall -pgmL markdown-unlit
  default-language:    Haskell2010

test-suite test-co-log
  build-depends:        base-noprelude >= 4.10 && < 4.13
                      , relude ^>= 0.4.0
                      , hedgehog ^>= 0.6
                      , co-log
                      , co-log-core
  mixins:               base-noprelude
                      , relude (Relude as Prelude)
  default-language:     Haskell2010
  default-extensions:   TemplateHaskell
                        FlexibleContexts
  hs-source-dirs:       test
  main-is:              Property.hs
  type:                 exitcode-stdio-1.0
