cabal-version:       2.4
name:                co-log
version:             0.4.0.0
synopsis:            Composable Contravariant Comonadic Logging Library
description:
    The default implementation of logging based on [co-log-core](http://hackage.haskell.org/package/co-log-core).
    .
    The ideas behind this package are described in the following blog post:
    .
    * [co-log: Composable Contravariant Combinatorial Comonadic Configurable Convenient Logging](https://kowainik.github.io/posts/2018-09-25-co-log)

homepage:            https://github.com/kowainik/co-log
bug-reports:         https://github.com/kowainik/co-log/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Dmitrii Kovanikov
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2018-2020 Kowainik
category:            Logging, Contravariant, Comonad
build-type:          Simple
stability:           provisional
extra-doc-files:     CHANGELOG.md
                     README.md
tested-with:         GHC == 8.2.2
                     GHC == 8.4.4
                     GHC == 8.6.5
                     GHC == 8.8.1

source-repository head
  type:                git
  location:            https://github.com/kowainik/co-log.git

common common-options
  build-depends:       base >= 4.10.1.0 && < 4.14

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -freverse-errors
                       -Wpartial-fields
  if impl(ghc >= 8.8.1)
    ghc-options:       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DerivingStrategies
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

common tutorial-options
  import:              common-options
  if os(windows)
    buildable:         False
  build-depends:       co-log
                     , co-log-core

  build-tool-depends:  markdown-unlit:markdown-unlit
  ghc-options:         -pgmL markdown-unlit

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Colog
                           Colog.Actions
                           Colog.Concurrent
                               Colog.Concurrent.Internal
                           Colog.Contra
                           Colog.Message
                           Colog.Monad
                           Colog.Pure
                           Colog.Rotation

  build-depends:       ansi-terminal ^>= 0.10
                     , bytestring ^>= 0.10.8
                     , co-log-core ^>= 0.2.1.0
                     , containers >= 0.5.7 && < 0.7
                     , contravariant ^>= 1.5
                     , directory ^>= 1.3.0
                     , filepath ^>= 1.4.1
                     , mtl ^>= 2.2.2
                     , stm >= 2.4 && < 2.6
                     , text ^>= 1.2.3
                     , chronos ^>= 1.1
                     , transformers ^>= 0.5
                     , typerep-map ^>= 0.3.2
                     , vector ^>= 0.12.0.3

executable play-colog
  import:              common-options
  hs-source-dirs:      tutorials
  main-is:             Main.hs

  build-depends:       co-log
                     , mtl
                     , typerep-map
                     , text

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable concurrent-playground
  import:              common-options
  hs-source-dirs:      tutorials
  main-is:             Concurrent.hs
  build-depends:       bytestring
                     , co-log
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

executable readme
  import:              tutorial-options
  main-is:             README.lhs
  build-depends:       text

executable tutorial-intro
  import:              tutorial-options
  main-is:             tutorials/1-intro/Intro.lhs

executable tutorial-custom
  import:              tutorial-options
  main-is:             tutorials/2-custom/Custom.lhs
  build-depends:       mtl

test-suite test-co-log
  import:              common-options
  build-depends:       co-log
                     , co-log-core
                     , hedgehog ^>= 1.0
  hs-source-dirs:      test
  main-is:             Property.hs
  type:                exitcode-stdio-1.0
